[gd_scene load_steps=7 format=2]

[ext_resource path="res://Dungeon/Game/Scripts/playing.gd" type="Script" id=1]
[ext_resource path="res://Dungeon/Game/Environment/transition.tscn" type="PackedScene" id=2]

[sub_resource type="Animation" id=1]
resource_name = "end"
length = 2.6
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:material:shader_param/cutoff")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1.5, 2 )
}
tracks/1/type = "method"
tracks/1/path = NodePath("../../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "end_game"
}, {
"args": [  ],
"method": "call_main_menu"
}, {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="GDScript" id=2]
script/source = "extends AudioStreamPlayer

var door_opening = load(\"res://Dungeon/Game/Sounds/door_enter.wav\")

func play_door_opening():
	stream = door_opening
	play()
"

[sub_resource type="Animation" id=3]
resource_name = "dead_screen"
tracks/0/type = "value"
tracks/0/path = NodePath("Overlay/MarginContainer/dead:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Overlay/MarginContainer/dead:modulate:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Overlay/MarginContainer/dead:modulate:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Overlay/MarginContainer/dead:modulate:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Overlay/MarginContainer/dead:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/5/type = "value"
tracks/5/path = NodePath("Overlay/MarginContainer/dead/return:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("Overlay/MarginContainer/dead:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Overlay/MarginContainer/dead:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Overlay/MarginContainer/dead:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Overlay/MarginContainer/dead:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}

[node name="Playing" type="Node2D"]
script = ExtResource( 1 )

[node name="Overlay" type="CanvasLayer" parent="."]
layer = 5

[node name="MarginContainer" type="MarginContainer" parent="Overlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -191.5
margin_top = -308.0
margin_right = 191.5
margin_bottom = -188.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dead" type="VBoxContainer" parent="Overlay/MarginContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 383.0
margin_bottom = 120.0
custom_constants/separation = 60
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="Overlay/MarginContainer/dead"]
margin_right = 383.0
margin_bottom = 27.0
text = "mission failed.you died"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="return" type="Button" parent="Overlay/MarginContainer/dead"]
modulate = Color( 2, 1, 2, 1 )
margin_top = 87.0
margin_right = 383.0
margin_bottom = 120.0
custom_colors/font_color = Color( 0.968627, 0, 1, 1 )
custom_colors/font_color_hover = Color( 0.623529, 0, 0.615686, 1 )
disabled = true
text = "return to menu"
flat = true

[node name="Control" type="Control" parent="Overlay"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransitionShader" parent="Overlay/Control" instance=ExtResource( 2 )]
mouse_filter = 2

[node name="AnimationPlayer" parent="Overlay/Control/TransitionShader" index="0"]
anims/end = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -15.0
script = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dead_screen = SubResource( 3 )
anims/fade_out = SubResource( 4 )
[connection signal="pressed" from="Overlay/MarginContainer/dead/return" to="." method="_on_return_pressed"]
[connection signal="animation_finished" from="Overlay/Control/TransitionShader/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="Overlay/Control/TransitionShader"]
